# Oikeie

./: .replit  Pasted-I-have-reviewed-the-code-related-to-the-login-and-registration-processes-in-your-repository-Here-ar-1729176502611.txt  Pasted-It-appears-that-multiple-redirects-are-occurring-due-to-the-redirection-logic-in-app-py-Here-are-so-1729179443335.txt  Pasted-Steps-to-Revert-to-In-Memory-Key-Value-Storage-Identify-Redis-Initialization-and-Usage-No-direct-r-1729179063573.txt  app.py  check_db_structure.py  main.py  migrate_db.py  pyproject.toml  wsgi.py
instance/: chat_app.db
migrations/versions/: a9935c5f7f60_add_handle_column_to_member_model_with_.py  add_rate_limit_table.py
static/js/: chat.js  script.js
templates/: chat.html  error.html  index.html  set_handle.html
