[project]
name = "repl-nix-slackchanneladder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "slack-sdk>=3.33.1",
    "flask-socketio>=5.4.1",
    "flask-mail>=0.10.0",
    "postmarker>=1.0",
    "itsdangerous>=2.2.0",
]
