[project]
name = "repl-nix-oikeio"
version = "0.1.0"
description = "Main chat application"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-socketio>=5.4.1",
    "flask-mail>=0.10.0",
    "postmarker>=1.0",
    "itsdangerous>=2.2.0",
    "flask-migrate>=4.0.7",
    "gunicorn>=23.0.0",
    "eventlet>=0.37.0",
]
